[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "global_threat_intel_aggregation_agent"
version = "0.1.0"
description = "Normalize and correlate threat intel feeds with confidence scoring."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
